# agenticros

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  agenticros  package-lock.json  package.json  pnpm-lock.yaml
.codex/: config.toml
docker/: Dockerfile.ros2  README.md  docker-compose.sim.yml
docs/: architecture.md  cameras.md  cli.md  codex-setup.md  eyes.md  hermes-setup.md  local-vlm.md  mcp-setup.md  memory.md  missions.md  nemoclaw.md  openclaw-releases-and-plugin-routes.md  readme.md  roadmap.md  robot-setup.md  simulation.md  skills.md  strategy-ai-agents-plus-ros.md  teleop.md  zenoh-agenticros.md
docs/blog/: find-object-linkedin.md  phase-1-complete.md  seed-catalog-and-skillrefs.md
examples/: readme.md
examples/detect-humans/: README.md
examples/dock-to-charger/: README.md
examples/find-and-approach/: README.md
examples/fleet-patrol/: README.md
examples/follow-me-ros/: README.md
examples/moveit-pick/: README.md
examples/navigate-through-poses/: README.md
examples/navigate-to/: README.md  capabilities.json  package.json
examples/start-slam/: README.md
examples/turtlebot-chat/: README.md
log/: latest_build
patches/: @eclipse-zenoh__zenoh-ts@1.9.0.patch
ros2_ws/src/agenticros_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/agenticros_bringup/launch/: cmd_vel_bridge.launch.py  gazebo_turtlebot3.launch.py  mode_a_gazebo.launch.py  mode_a_gazebo_rviz.launch.py  rosbridge_gazebo.launch.py  rviz.launch.py  turtlebot3_gazebo_rviz.launch.py
ros2_ws/src/agenticros_discovery/agenticros_discovery/: discovery_node.py
ros2_ws/src/agenticros_msgs/: CMakeLists.txt
ros2_ws/src/agenticros_msgs/msg/: RobotInfo.msg
ros2_ws/src/agenticros_sim/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/agenticros_sim/config/: agenticros-sim.config.json  amr_bridge.yaml  amr_view.rviz  arm_bridge.yaml  arm_view.rviz  nav2_params.yaml
ros2_ws/src/agenticros_sim/env-hooks/: gz_resource_path.dsv.in  gz_resource_path.sh.in
ros2_ws/src/agenticros_sim/launch/: sim_amr.launch.py  sim_amr_nav2.launch.py  sim_arm.launch.py
ros2_ws/src/agenticros_sim/maps/: agenticros_indoor.pgm  agenticros_indoor.yaml
ros2_ws/src/agenticros_sim/models/agenticros_amr/: model.config  model.sdf
ros2_ws/src/agenticros_sim/models/agenticros_arm/: model.config  model.sdf
ros2_ws/src/agenticros_sim/urdf/: agenticros_amr.urdf.xacro  agenticros_arm.urdf.xacro
ros2_ws/src/agenticros_sim/worlds/: agenticros_indoor.sdf
scripts/: agenticros-describer.policy.yaml  check-cli-tarball-install.mjs  configure_for_sim.sh  onboard_robot.sh  openai.policy.yaml  pack-runtime.mjs  refresh-skill-deps.mjs  run_nemoclaw_host_stack.sh  sandbox_rosbridge_relay.py  setup_gateway_plugin.sh  setup_robot.sh  setup_workspace.sh  start_demo.sh  sync-skill-tools.mjs  test-follow-me-sim.mjs  test-mcp-e2e.mjs  test-navigate-sim.mjs  zenoh-bridge-ros2dds-robot.json5
scripts/__tests__/: refresh-skill-deps.test.mjs
scripts/sim/: run_sim.sh
