<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agenticros_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and RViz configs for TurtleBot3 Gazebo simulation and visualization aligned with AgenticROS defaults (cmd_vel, /scan, rosbridge).</description>
  <maintainer email="team@plaipin.com">PlaiPin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
