<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agenticros_sim</name>
  <version>0.1.0</version>
  <description>
    AgenticROS Gazebo Harmonic simulation assets: indoor world, 2-wheel AMR
    model (depth camera + GPU lidar + IMU), ros_gz_bridge config that exposes
    topics on AgenticROS' real-robot topic names, and a launch file that wires
    it all together. Use with the agenticros CLI:  agenticros up sim-amr.
  </description>
  <maintainer email="hello@plaipin.com">PlaiPin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
